Fixed Sprint Strafe on sneaking